feat: Add compile-time validation for Udon bindings and events

--- a/Editor/Templates/Horizon_Default_Layout.html
+++ b/Editor/Templates/Horizon_Default_Layout.html
@@ -2,17 +2,17 @@
 
     <!-- 1. SIDEBAR -->
     <div class="sidebar">
-        <button class="nav-btn" u-click="OnNavHome" u-bind="btnNavHome">
+        <button class="nav-btn" u-click="OnNavHome">
             <icon src="house_with_garden.png" />
         </button>
 
-        <button class="nav-btn" u-click="OnNavWeather" u-bind="btnNavWeather">
+        <button class="nav-btn" u-click="OnNavWeather">
             <icon src="partly_sunny_rain.png" />
         </button>
 
         <div class="spacer"></div>
 
-        <button class="nav-btn" u-click="OnNavAbout" u-bind="btnNavAbout">
+        <button class="nav-btn" u-click="OnNavAbout">
             <icon src="information_source.png" />
         </button>
     </div>
