refactor: Remove redundant editor button

--- a/Editor/Templates/Horizon_Default_Layout.html
+++ b/Editor/Templates/Horizon_Default_Layout.html
@@ -89,4 +89,8 @@
             </module>
         </div>
     </div>
+
+    <div id="GlobalOverlay" ignore-layout u-bind="overlayContainer">
+    </div>
+
 </div>
