--- a/Horizon-Dashboard/Editor/Horizon_Default_Theme.css
+++ b/Horizon-Dashboard/Editor/Horizon_Default_Theme.css
@@ -163,3 +163,19 @@ toggle {
     width: 200px;
     background-color: #FFFFFF1A;
 }
+
+/* --- PLAYER GRID --- */
+.player-slot {
+    width: 64px;
+    height: 64px;
+    background-color: #FFFFFF1A;
+    border-radius: 32px;
+    padding: 10px;
+    align-items: center;
+    justify-content: center;
+}
+
+.player-avatar {
+    flex-grow: 1;
+    color: #FFFFFFCC;
+}
